2011-04-30 arne

	* fix CKickButton key down repeat triggering beginEdit more than once
	* remove usage of isTypeOf("CViewContainer") and instead use dynamic_cast/reinterpret_cast
	* add assert in CView::attached(CView* parent) that checks that the parent is a CViewContainer, other types are not supported !
	* fix drawcontext on windows did not work with globalAlpha other than 1 for fillLinearGradient

2011-04-25 arne

	* fix a memory leak in CFontChooser
	* rearrange some code in uidescription
	* CSplitView docs and fixes

2011-04-22 arne

	* fix CVuMeter decreaseValue not working as expected
	* moved all uses of kMsgCheckIfViewContainer into the deprecated macro

2011-04-06 arne

	* fix control-click in cocoa not a right click
	* fix an update bug with COptionMenu not setting the value correctly on popup
	* gdiplus line style implementation

2011-03-29 arne

	* add immediate text change style to CTextEdit
	* revert UTF8StringHelper optimization as it does not work under 64 bit
	* some views does not call setDirty(false) in their draw methods. fixed.
	* change default fonts on Mac to Arial like on Windows

2011-03-23 arne

	* added CTextButtton control view class

2011-03-20 arne

	* removed the sublisteners in CControl and replaced it by IDependency
	
2011-03-19 arne

	* new class IDependency see idependency.h for documentation
	* new IDataBrowser methods: dbAttached(..) and dbRemoved(..)

2011-03-16 arne

	* CGraphicsPath redesign
	* fix an issue with CScrollView and focus view drawing

2011-03-11 arne

	* Direct2D graphics path addArc method implementation. clockwise setting not yet.
	
2011-03-10 arne

	* new font face kStrikethroughFace (thanks to Bick Tick for this)
	* new class CString which holds a platform representation of a UTF8String.
		The CDrawContext class has one CString so that the platform code does not need to convert a string twice when drawing
		the string into a rectangle

2011-03-09 arne
